# strands-agent

./: .gitignore  DEPLOYMENT.md  README.md
.github/: CODEOWNERS
.github/workflows/: agent-ci.yml  cdk-ci.yml  test.yml
.kiro/steering/: product.md  structure.md  tech.md
agent/: .env.example  Dockerfile  README.md  pyproject.toml
agent/src/: agent.py  agentcore_app.py
agent/tests/: test_agent.py
cdk/: README.md  package-lock.json  package.json
cdk/lib/: strands-agent-stack.ts
cdk/test/: cdk.test.ts
cdk/test/__snapshots__/: cdk.test.ts.snap
